[tool.poetry]
name = "goit-pythonweb-hw-04"
version = "0.1.0"
description = "Script for files sorting based on file extension"
authors = ["Coffee-2-Go"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
aiopath = "^0.6.11"
aioshutil = "^1.5"
aiofiles = "^24.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
